Test coverage for Repository layer. Fix minor bugs.